# logos

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  logos.toml  pyproject.toml
.agents/: AGENTS.md
.agents/skills/codebase-exploration/: SKILL.md
.agents/skills/implementation-planning/: SKILL.md
.codex/: CODEX.md  README.md  settings.json  setup.sh
.gemini/: GEMINI.md  README.md  settings.json  setup.ps1
.gemini/commands/: nous.md
.gemini/plugin/: README.md
.logos/: active-profile.toml  config.toml  target.toml
.logos/session/: nous-state.json
benchmarks/: README.md
core/context/: compression.md  discovery.md  evidence.md  handoff.md  session-memory.md
core/evaluation/: acceptance-criteria.md  final-response-rubric.md  implementation-rubric.md  plan-rubric.md  review-rubric.md  test-rubric.md
core/guards/: dependency-install.yaml  destructive-command.yaml  excluded-scope.yaml  file-write-boundary.yaml  secrets-detection.yaml
core/profiles/: claude-code.yaml  gemini.yaml
core/prompts/: README.md  assembly.md  base-system.md  response-style.md  target-adapter.md
core/roles/: explorer.md  gap-analyzer.md  reviewer.md  role-codes.md
core/rules/: command-execution.md  context-handoff.md  delegation.md  dependency-install.md  filesystem.md  git.md  low-fast-path.md  network.md  risk-classification.md  secrets.md  security.md  user-approval.md  verification.md
core/workflows/: execution.yaml  high.yaml  middle.yaml  planning.yaml  recovery.yaml  review.yaml
docs/architecture/: logos-runner.md
docs/decisions/: adr-001-project-structure.md  adr-002-plugin-boundary.md  adr-003-targets-not-hosts.md
docs/design/: v12.md
docs/examples/: README.md
docs/guide/: overview.md
docs/reference/: benchmark-format.md  configuration.md  document-types.md  frontmatter-reference.md  instruction-authoring.md  markdown-authoring.md  plugins.md  run-log-format.md  targets.md
docs/templates/: command.template.md  guard-policy.template.md  hook.template.md  implementation-role.template.md  output-template.template.md  role.template.md  rubric.template.md  rule.template.md  skill.template.md  workflow.template.md
harness/: README.md
harness/guards/: context-budget.yaml  high-risk-override.yaml  required-fields.yaml
harness/host_profiles/: codex.yaml
harness/roles/: executor.md  plan-reviewer.md  tester.md
harness/rules/: mode-selection.md  override-policy.md  retry-policy.md
harness/workflows/: low.yaml
plugins/: README.md
plugins/builtin/: README.md
plugins/examples/: README.md
schemas/: README.md  approval.schema.json  asset-hashes.schema.json  asset-manifest.schema.json  benchmark-suite.schema.json  benchmark-task.schema.json  checkpoint.schema.json  comparison-report.schema.json  context-handoff.schema.json  evidence.schema.json  execution-result.schema.json  exploration-result.schema.json  guard-result.schema.json  guards-manifest.schema.json  harness-workflow.schema.json  hook-state.schema.json  host-profile.schema.json  intake-result.schema.json  interview-draft.schema.json  logos-config.schema.json  measurement-log.schema.json  plan-record.schema.json  plugin-manifest.schema.json  prompt-assembly-manifest.schema.json  reproducibility.schema.json  role-profile.schema.json  run-record.schema.json  run-result.schema.json  spec-result.schema.json  spec.schema.json  target-manifest.schema.json  task-plan-result.schema.json  task-plan.schema.json  verification-result.schema.json  work-event.schema.json  work-memory.schema.json
scripts/: README.md  codex-pretool-hard-deny-probe.py
src/logos/: __init__.py
src/logos/cli/: main.py  (+1 more)
targets/: README.md
targets/codex-cli/: README.md
targets/gemini-cli/: README.md
(+154 files in other folders)
