[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logos-harness"
version = "0.1.0"
description = "A performance calibration harness for lifting Gemini Pro High toward Codex and Claude Code coding-agent behavior."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
  { name = "Logos" }
]
dependencies = [
  "pydantic>=2.8",
  "pyyaml>=6.0",
  "tomli-w>=1.0"
]

[project.scripts]
logos = "logos_installer.cli:main"
logos-runner = "logos_runner.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
  "mypy>=1.10"
]

[tool.setuptools]
packages = [
  "logos_core",
  "logos_core.assets",
  "logos_core.config",
  "logos_core.context",
  "logos_core.evaluation",
  "logos_core.guards",
  "logos_core.manifests",
  "logos_core.prompt_assembly",
  "logos_core.rules",
  "logos_core.work_state",
  "logos_core.workflow",
  "logos_installer",
  "logos_installer.targets",
  "logos_runner",
  "logos_runner.codex",
  "logos_runner.state",
  "logos_runner.stages",
]

[tool.setuptools.package-dir]
logos_core = "packages/logos-core/src/logos_core"
"logos_core.assets" = "packages/logos-core/src/logos_core/assets"
"logos_core.config" = "packages/logos-core/src/logos_core/config"
"logos_core.context" = "packages/logos-core/src/logos_core/context"
"logos_core.evaluation" = "packages/logos-core/src/logos_core/evaluation"
"logos_core.guards" = "packages/logos-core/src/logos_core/guards"
"logos_core.manifests" = "packages/logos-core/src/logos_core/manifests"
"logos_core.prompt_assembly" = "packages/logos-core/src/logos_core/prompt_assembly"
"logos_core.rules" = "packages/logos-core/src/logos_core/rules"
"logos_core.work_state" = "packages/logos-core/src/logos_core/work_state"
"logos_core.workflow" = "packages/logos-core/src/logos_core/workflow"
logos_installer = "packages/logos-installer/src/logos_installer"
"logos_installer.targets" = "packages/logos-installer/src/logos_installer/targets"
logos_runner = "packages/logos-runner/src/logos_runner"
"logos_runner.codex" = "packages/logos-runner/src/logos_runner/codex"
"logos_runner.state" = "packages/logos-runner/src/logos_runner/state"
"logos_runner.stages" = "packages/logos-runner/src/logos_runner/stages"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
  "packages/logos-core/src",
  "packages/logos-installer/src",
  "packages/logos-runner/src"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
packages = [
  "logos_core",
  "logos_installer",
  "logos_runner"
]
strict = true
